k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spywatcher
  labels:
    name: spywatcher
    environment: production
